fixed the wrongdoings by fixing percentage. note: doing a slideshow like this is not a permanent solution, it would take way too much effort

--- a/1020-reiger-project-practice/css/styles.css
+++ b/1020-reiger-project-practice/css/styles.css
@@ -304,83 +304,83 @@ h4 {
 @-webkit-keyframes imageAnimation { 
     0% { opacity: 0;
     -webkit-animation-timing-function: ease-in; }
-    8% { opacity: 1;
+    3.13% { opacity: 1;
          -webkit-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
+    6.25% { opacity: 1 }
+    9.38% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-moz-keyframes imageAnimation { 
     0% { opacity: 0;
     -moz-animation-timing-function: ease-in; }
-    8% { opacity: 1;
+    3.13% { opacity: 1;
          -moz-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
+    6.25% { opacity: 1 }
+    9.38% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-o-keyframes imageAnimation { 
     0% { opacity: 0;
     -o-animation-timing-function: ease-in; }
-    8% { opacity: 1;
+    3.13% { opacity: 1;
          -o-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
+    6.25% { opacity: 1 }
+    9.38% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-ms-keyframes imageAnimation { 
     0% { opacity: 0;
     -ms-animation-timing-function: ease-in; }
-    8% { opacity: 1;
+    3.13% { opacity: 1;
          -ms-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
+    6.25% { opacity: 1 }
+    9.38% { opacity: 0 }
     100% { opacity: 0 }
 }
 @keyframes imageAnimation { 
     0% { opacity: 0;
     animation-timing-function: ease-in; }
-    8% { opacity: 1;
+    3.13% { opacity: 1;
          animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
+    6.25% { opacity: 1 }
+    9.38% { opacity: 0 }
     100% { opacity: 0 }
 }
 /* Animation for the title */
 /*same reasoning for the title, just that we want it to disappear a bit quicker, hence the opacity 0 at 19%:*/
 @-webkit-keyframes titleAnimation { 
     0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
+    3.13% { opacity: 1 }
+    6.25% { opacity: 1 }
+    7.03% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-moz-keyframes titleAnimation { 
     0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
+    3.13% { opacity: 1 }
+    6.25% { opacity: 1 }
+    7.03% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-o-keyframes titleAnimation { 
     0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
+    3.13% { opacity: 1 }
+    6.25% { opacity: 1 }
+    7.03% { opacity: 0 }
     100% { opacity: 0 }
 }
 @-ms-keyframes titleAnimation { 
     0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
+    3.13% { opacity: 1 }
+    6.25% { opacity: 1 }
+    7.03% { opacity: 0 }
     100% { opacity: 0 }
 }
 @keyframes titleAnimation { 
     0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
+    3.13% { opacity: 1 }
+    6.25% { opacity: 1 }
+    7.03% { opacity: 0 }
     100% { opacity: 0 }
 }
 /* Show at least something when animations not supported */
